Fix new ui on mobile

--- a/front-end/src/components/Stalls.css
+++ b/front-end/src/components/Stalls.css
@@ -26,7 +26,7 @@
   background-color: white;
 }
 
-@media (min-width: 590px) {
+@media (min-width: 510px) {
   .Stalls {
     width: 460px;
   }
