--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
-  padding: 10px 50px 10px 50px;
+  padding: 10px;
   font-family: sans-serif;
   background-color: #5d9cec;
+}
+
+@media (min-width: 768px) {
+  body {
+    padding: 10px 50px;
+  }
 }
